all collabs in index are visible and the divider line problem on my collab is fixed.

--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -206,8 +206,19 @@
       text-align: center;
     }
 
-    .btn-outline-primary {
-      margin-bottom: 0;
+    .btn-collab-card {
+      width: 20%;
+      display: flex;
+      justify-content: center;
+
+
+      .btn-outline-primary {
+        margin-bottom: 0;
+      }
+
+      .btn-view-this-collab {
+        width: 65%;
+      }
     }
   }
 
